<resources>
    <string name="app_name">The Exchange</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search">Search</string>


    <!-- Main Activity -->

    <string name="toolbar_title_country">Países</string>

    <!-- Exchange Activity -->
    <string name="toolbar_title_exchange">Meu intercâmbio</string>

    <!-- Exchange Category Activity -->
    <string name="toolbar_title_exchange_category">Categorias do intercâmbio</string>

    <!-- Country Activity -->
    <string name="title_destiny_country">Conheça o destino</string>
    <string name="title_attractions_country">Atrações turísticas</string>

    <!-- Fly Activity -->
    <string name="title_fly">Vôo</string>


    <!-- Drawer menu -->

    <string name="login">Login</string>
    <string name="my_exchange">Meu intercâmbio</string>
    <string name="expoints">Expoints</string>
    <string name="community">Comunidade</string>
    <string name="chat">Chat</string>
    <string name="agencies">Agencias</string>
    <string name="partner">Parceiros</string>
    <string name="logoff">Sair</string>

    <!-- Login -->
    <string name="title_login_facebook">Sign Facebook</string>
    <string name="title_login_google">Sign Google</string>
    <string name="sign_in">Sing in</string>



</resources>
