<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
            android:id="@+id/menu_group"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_account_box"
                android:title="@string/login"/>
        <item
                android:visible="false"
                android:id="@+id/nav_exchange"
                android:icon="@drawable/ic_card_travel"
                android:title="@string/my_exchange"/>

        <item
                android:id="@+id/nav_expoints"
                android:icon="@drawable/ic_expoints"
                android:title="@string/expoints"/>

        <item
                android:id="@+id/nav_community"
                android:title="@string/community"
                android:icon="@drawable/ic_community"/>

        <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_chat"
                android:title="@string/chat"/>

        <item
                android:id="@+id/nav_agencies"
                android:icon="@drawable/ic_agencies"
                android:title="@string/agencies"/>

        <item
                android:id="@+id/nav_logoff"
                android:icon="@drawable/ic_logoff_foreground"
                android:title="@string/logoff"
                android:visible="false"/>
    </group>


</menu>
